--- a/src/header/Header.module.css
+++ b/src/header/Header.module.css
@@ -1,7 +1,7 @@
 .header {
     height: 80px;
-    background-color: aqua;
     display: flex;
-    justify-content: flex-end;
-    align-items: center;
+    justify-content: center;
+    background-color: #252527;
+    margin: 0 auto;
 }
