--- a/src/main/main.module.css
+++ b/src/main/main.module.css
@@ -1,10 +1,8 @@
 .main {
     height: 100vh;
-    background-color: #D296A1FF;
 }
 
 .text {
-    background-color: green;
     width: 400px;
     align-items: center;
 }
@@ -13,4 +11,8 @@
     background-color: red;
     width: 300px;
     height: 400px;
+}
+
+.mainTitle {
+    font-size: 50px;
 }
