--- a/src/nav/nav.module.css
+++ b/src/nav/nav.module.css
@@ -1,7 +1,13 @@
 .nav {
-    border: solid 1px red;
-    width: 300px;
+    width: 1200px;
     display: flex;
-    justify-content: space-between;
 
+    justify-content: space-between;
+    margin: 0 auto;
+    padding-top: 25px;
+}
+
+ a {
+    color: white;
+     text-decoration: none;
 }
