--- a/src/skills/skill/Skill.module.css
+++ b/src/skills/skill/Skill.module.css
@@ -1,13 +1,28 @@
 .skill {
+    margin-top: 50px;
     width: 250px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    text-align: center;
+
 }
 
 .icon {
-    width: 60px;
-    height: 60px;
-    background-color: aqua;
+    width: 80px;
+    height: 80px;
+    background-color: #1f1f20;
+    transform: rotate(-45deg);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.fontsIcons {
+    font-size: 50px;
+    transform: rotate(45deg);
+    color: #4e93e6;
+}
+
+.title {
+    margin-top: 40px;
 }
