--- a/src/projects/project/Project.module.scss
+++ b/src/projects/project/Project.module.scss
@@ -26,7 +26,6 @@
         }
         .button {
             align-items: center;
-            background-color: #4e93e6;
             width: 100px;
             height: 30px;
             border-radius: 4px;
@@ -36,6 +35,27 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            &::after {
+                content: '';
+                position: absolute;
+                width: 50%;
+                height: 10px;
+                background: #4e93e6;
+                bottom: -2px;
+                z-index: -1;
+                transition: all 0.2s ease-in-out;
+                border-radius: 4px;
+            }
+            &:hover {
+                text-decoration: none;
+                color: white;
+                &::after {
+                    width: 100%;
+                    height: 110%;
+                    transition: all 0.3s ease-in-out 0s;
+
+                }
+            }
         }
     }
     .description {
