--- a/src/header/Header.module.scss
+++ b/src/header/Header.module.scss
@@ -4,4 +4,8 @@
     justify-content: center;
     background-color: #252527;
     margin: 0 auto;
+@media screen and (max-width: 700px) {
+    height: 50%;
+
+}
 }
