--- a/src/main/main.module.scss
+++ b/src/main/main.module.scss
@@ -11,9 +11,14 @@
     background-color: red;
     width: 300px;
     height: 400px;
-    background-image: url('../assets/Image/photo.jpg');
+    background-image: url('../assets/Image/ava.jpg');
     background-size: cover;
     background-position: center;
+    &:hover {
+        transform: scale(1.05, 1.05);
+        transition: 1s
+
+    }
 }
 
 .border {
@@ -34,6 +39,12 @@ position: relative;
 
 .mainTitle {
     font-size: 50px;
+    @media screen and (max-width: 699px) {
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+    }
+
 }
 
 
