add border button

--- a/src/header/Header.module.scss
+++ b/src/header/Header.module.scss
@@ -21,6 +21,7 @@
         height: 50px;
        color: #4e93e6;
         background-color:#1f1f20;
+      border: #1f1f20;
       font-size: 20px;
         right: 0px;
         top: 0px;
