--- a/src/main/main.module.scss
+++ b/src/main/main.module.scss
@@ -3,6 +3,9 @@
 
 .main {
     height: 100vh;
+    @media screen and (min-width: 699px) {
+        height: 100vh;
+    }
 }
 
 
@@ -17,7 +20,9 @@
     &:hover {
         transform: scale(1.05, 1.05);
         transition: 1s
-
+    }
+    @media screen and (max-width: 699px) {
+       margin-top: 20px;
     }
 }
 
@@ -33,7 +38,9 @@ position: relative;
         left:15px;
         bottom:-15px;
         z-index: -1;
-
+        @media screen and (max-width: 699px) {
+            bottom:-35px;
+        }
     }
 }
 
