--- a/src/projects/project/Project.module.scss
+++ b/src/projects/project/Project.module.scss
@@ -5,7 +5,11 @@
     align-items: center;
     text-align: center;
     margin-top: 40px;
+    margin-bottom: 30px;
     background-color: #252527;
+    @media screen and (min-width: 1024px) {
+        margin-right: 30px;
+    }
     .icon {
         width: 400px;
         height: 260px;
