change width project

--- a/src/projects/project/Project.module.scss
+++ b/src/projects/project/Project.module.scss
@@ -64,6 +64,9 @@
     }
     .description {
         font-family: 'Poppins', sans-serif;
+        @media screen and (max-width: 1024px) {
+            width: 300px;
+        }
     }
 }
 
