--- a/src/header/Header.module.scss
+++ b/src/header/Header.module.scss
@@ -1,11 +1,12 @@
 .header {
     height: 80px;
+  width: auto;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     background-color: #252527;
     margin: 0 auto;
     position: relative;
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 900px) {
     height: 50%;
 
 }
@@ -13,7 +14,7 @@
 
 .btn {
     display: none;
-    @media screen and (max-width: 700px) {
+    @media screen and (max-width: 900px) {
         position: absolute;
         display: block;
         content: '';
@@ -28,7 +29,7 @@
     }
 }
 .desktop {
-  @media screen and (max-width: 700px) {
+  @media screen and (max-width: 900px) {
     display: none;
   }
 }
