--- a/src/main/main.module.scss
+++ b/src/main/main.module.scss
@@ -3,15 +3,17 @@
 
 .main {
     height: 100vh;
-    @media screen and (min-width: 699px) {
-        height: 100vh;
+    @media screen and (min-width: 320px ) and (max-width: 1079px) {
+        height: 100%;
+    }
+    @media screen and (min-width: 320px ) and (max-width: 900px) {
+        padding: 50px;
     }
 }
 
 
 
 .photo {
-    background-color: red;
     width: 300px;
     height: 400px;
     background-image: url('../assets/Image/ava.jpg');
@@ -21,15 +23,16 @@
         transform: scale(1.05, 1.05);
         transition: 1s
     }
-    @media screen and (max-width: 699px) {
+    @media screen and (max-width: 1079px) {
        margin-top: 20px;
     }
+
 }
 
 .border {
 position: relative;
     z-index: 0;
-    @media screen and (max-width: 699px) {
+    @media screen and (max-width: 1079px) {
         margin-bottom: 60px;
     }
     &::before {
@@ -41,7 +44,7 @@ position: relative;
         left:15px;
         bottom:-15px;
         z-index: -1;
-        @media screen and (max-width: 699px) {
+        @media screen and (max-width: 1079px) {
             bottom:-35px;
         }
     }
@@ -49,7 +52,7 @@ position: relative;
 
 .mainTitle {
     font-size: 50px;
-    @media screen and (max-width: 699px) {
+    @media screen and (max-width: 1079px) {
         display: flex;
         justify-content: center;
         flex-wrap: wrap;
